 - script: new functions: callAnimation, setAnimation, playSound;
 - New script to controll cattle idle behaviour;
 - New script to controll beggars idle behaviour;
 - Added support to md5 models and animations;
 - 3D messages could be static on Y axis;
 - Lots of adjusts and fixes to the A* implementation;
 - Disabling vsync via OpenGL for better perfomance in OSX;
 - Verifying sight when NPC selecting target enemy;

 - Simplified number of skills to 12;
 - Removed the class Administration Student;

 - New Models;
 - New Sound Effects;

BugFixes:
 - sound: Fixed a possible double OpenAL stop when releasing an ogg_stream;
 - sound: Fixed a undesired loop with a sound file lesser than the buffer;
 - script: Fixed a bug on jumping from "else if" statements when an 
           "if" was successfull;
 - sound: keep music playing if try to load same music file;
 - sun: Light w must be 1.0;
 - map: fix for mapLights set;
 - render: Fixed the offset to avoid glitches between rendered floor surfaces
           and shadows;

================================================
|                Version 0.8                   |
|            Released: 2011-12-19              |
================================================
 - Added view frustum culling for shadows;
 - map: Add object rotation to all axis;
 - Created scene and sceneNode abstractions;
 - New Bounding Box class;
 - Added character info text when mouse over portrait;
 - gui: defined mouse hint for all gui objects;
 - gui: added object visibility flag;
 - Added support to MacOSX;
 - Added shader for texture splatting (splatting now can be via
   ARB extensions or GLSL shader);
 - Added money split;
 - New models;
 - New mission: Old software factory computer;
 - New maps;
 - dntMapEditor: Show mouse world coordinates;
 - dntMapEditor: grid mode alternative on object XZ move;
 - dntMapEditor: Tool to select and edit objects;
 - Using code::blocks as default IDE for Windows build;

BugFixes: